--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="header">
-  <nav class="nav">
+  <nav class="nav-top">
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="#">Blog</a></li>
@@ -8,183 +8,132 @@
 			<li><a href="mailto:rachel.fieldday@gmail.com">Contact</a></li>
 		</ul>
 	</nav>
-	<div class="inner">
-		<header>
-			<h1>Field Day Terrariums</h1>
-			<span class="byline">Miniature Worlds by Rachel Borgh</span>
-		</header>
-		<footer>
-			<a href="#banner" class="button circled scrolly">Hello</a>
-		</footer>
+
+	<div class="nav-bottom">
+		<h1>Field Day Terrariums</h1>
+			<p>Miniature Worlds by Rachel Borgh</p>
+			<a href="#" class="button">Hello</a>
 	</div>
 </div>
 			
-<div class="banner">
+<div class="main-banner">
 	<img class="me" src="images/me.jpg">
 	<h2>I love making terrariums. I can’t stop making terrariums. My home is becoming one big terrarium. Time to share these little creations...with you!</h2>
-	<span class="byline">
+	<p>
 		Terrariums provide a platform upon which my idealistic dreams can come true!  Taking pieces from the environment at large and manipulating them into a small container where they will thrive and establish their own, separate environment is fascinating and inspiring to me.  
 		An interesting terrarium is one that considers both form and function, one that is capable of sustaining life, both real and imagined…making that happen is the fun part! 
-	</span>
+	</p>
 </div>
 
-<div class="carousel">
-	<div class="reel">
+<div class="carousel-container">
+	<div class="carousel">
 		<article>
-			<img class="test" src="images/pic04.jpg" alt="" />
-			<header>
-				<h3>Finished Environments</h3>
-			</header>
+			<img src="images/pic04.jpg" alt="" />
+			<h3>Finished Environments</h3>
 			<p>Here are some examples of terrariums ready for your home. Maybe for your bookcase, desk or counter.</p>
 		</article>
 
 		<article>
-			<img id="test" src="images/pic05.jpg" alt="" />
-			<header>
-				<h3>Caring for Your New Terrarium</h3>
-			</header>
+			<img src="images/pic05.jpg" alt="" />
+			<h3>Caring for Your New Terrarium</h3>
 			<p>Everything you need to know to keep your new little world healthy, happy and beautiful.</a></p>
 		</article>
 
 		<article>
-			<img id="test" src="images/pic01.jpg" alt="" />
-			<header>
-				<h3>A Work in Progress</h3>
-			</header>
+			<img src="images/pic01.jpg" alt="" />
+			<h3>A Work in Progress</h3>
 			<p>I’m working to make dirt under the fingernails the newest and hottest look this season.</p>
 		</article>
 				
 		<article>
-			<img id="test" src="images/pic02.jpg" alt="" />
-			<header>
-				<h3>My Tools</h3>
-			</header>
+			<img src="images/pic02.jpg" alt="" />
+			<h3>My Tools</h3>
 			<p>A variety of tools collected from all over the place help with production.  Get creative!</p>
 		</article>
 
 		<article>
-			<img id="test" src="images/pic03.jpg" alt="" />
-			<header>
-				<h3>Scenes</h3>
-			</header>
+			<img src="images/pic03.jpg" alt="" />
+			<h3>Scenes</h3>
 			<p>Miniature people doing miniature things combined with elements straight from nature.</p>
 		</article>
 	</div>
 </div>
 			
-<div class="wrapper">	
-	<section class="finished-display">
-		<header>
-			<h2>Finished Environments</h2></br>
-		</header>
+<div class="showcase-wrapper">	
+	<section class="showcase">
+		<h2>Finished Environments</h2>
 		<div class="row">
-			<article class="4u special">
-				<a class="fancybox samples image featured" rel="group" href="images/finished_one_large.jpg"><img src="images/finished_one_small.jpg" alt="" /></a>
-				<header>
-					<h3>Bee Keepers in Sand</h3>
-				</header>
+			<article class="single-showcase">
+				<a class="fancybox" rel="group" href="images/finished_one_large.jpg"><img src="images/finished_one_small.jpg" alt="" /></a>
+				<h3>Bee Keepers in Sand</h3>
 			</article>
-			<article class="4u special">
-				<a class="fancybox samples image featured" rel="group" href="images/finished_two_large.jpg"><img src="images/finished_two_small.jpg" alt="" /></a>
-				<header>
-					<h3>Lone Woman</h3>
-				</header>
+
+			<article class="single-showcase">
+				<a class="fancybox" rel="group" href="images/finished_two_large.jpg"><img src="images/finished_two_small.jpg" alt="" /></a>
+				<h3>Lone Woman</h3>
 			</article>
-			<article class="4u special">
-				<a class="fancybox samples image featured" rel="group" href="images/finished_three_large.jpg"><img src="images/finished_three_small.jpg" alt="" /></a>
-				<header>
-					<h3>Pretty Pink</h3>
-				</header>
+
+			<article class="single-showcase">
+				<a class="fancybox" rel="group" href="images/finished_three_large.jpg"><img src="images/finished_three_small.jpg" alt="" /></a>
+				<h3>Pretty Pink</h3>
 			</article>
-		</div>
+		</div> <!-- end of row -->
+
 		<div class="row">
-			<article class="4u special">
-				<a class="fancybox samples image featured" rel="group" href="images/finished_four_large.jpg"><img src="images/finished_four_small.jpg" alt="" /></a>
-				<header>
-					<h3>Minor Miners</h3>
-				</header>
+			<article class="single-showcase">
+				<a class="fancybox" rel="group" href="images/finished_four_large.jpg"><img src="images/finished_four_small.jpg" alt="" /></a>
+				<h3>Minor Miners</h3>
 			</article>
-			<article class="4u special">
-				<a class="fancybox samples image featured" rel="group" href="images/finished_five_large.jpg"><img src="images/finished_five_small.jpg" alt="" /></a>
-				<header>
-					<h3>Mourners</h3>
-				</header>
+
+			<article class="single-showcase">
+				<a class="fancybox" rel="group" href="images/finished_five_large.jpg"><img src="images/finished_five_small.jpg" alt="" /></a>
+				<h3>Mourners</h3>
 			</article>
-			<article class="4u special">
-				<a class="fancybox samples image featured" rel="group" href="images/finished_six_large.jpg"><img src="images/finished_six_small.jpg" alt="" /></a>
-				<header>
-					<h3>Bee Keepers</h3>
-				</header>
+
+			<article class="single-showcase">
+				<a class="fancybox" rel="group" href="images/finished_six_large.jpg"><img src="images/finished_six_small.jpg" alt="" /></a>
+				<h3>Bee Keepers</h3>
 			</article>
-		</div>
+		</div> <!-- end of row -->
+
 		<div class="row">
-			<article class="4u special">
-				<a class="fancybox samples image featured" rel="group" href="images/finished_seven_large.jpg"><img src="images/finished_seven_small.jpg" alt="" /></a>
-				<header>
-					<h3>Bathing Beauty</h3>
-				</header>
+			<article class="single-showcase">
+				<a class="fancybox" rel="group" href="images/finished_seven_large.jpg"><img src="images/finished_seven_small.jpg" alt="" /></a>
+				<h3>Bathing Beauty</h3>
 			</article>
-			<article class="4u special">
-				<a class="fancybox samples image featured" rel="group" href="images/finished_eight_large.jpg"><img src="images/finished_eight_small.jpg" alt="" /></a>
-				<header>
-					<h3>Barnacles</h3>
-				</header>
+
+			<article class="single-showcase">
+				<a class="fancybox" rel="group" href="images/finished_eight_large.jpg"><img src="images/finished_eight_small.jpg" alt="" /></a>
+				<h3>Barnacles</h3>
 			</article>
-			<article class="4u special">
-				<a class="fancybox samples image featured" rel="group" href="images/finished_nine_large.jpg"><img src="images/finished_nine_small.jpg" alt="" /></a>
-				<header>
-					<h3>Dig</h3>
-				</header>
+
+			<article class="single-showcase">
+				<a class="fancybox" rel="group" href="images/finished_nine_large.jpg"><img src="images/finished_nine_small.jpg" alt="" /></a>
+				<h3>Dig</h3>
 			</article>
-			<div id="largeImgPanel" onclick="hideMe(this);">
-	            <img id="largeImg" style="height: 85%; margin: 0; padding: 0;" />
-	        </div>
-					</div>
-				</section>
+		</div> <!-- end of row -->
+	</section> <!-- end of showcase -->
+</div>	<!-- end of showcase-wrapper -->
 
 
-			</div>	
+<footer>
+	<section class="footer-contact">
+		<h3>Interested in purchasing a terrarium or even learning how its done?</h3>
+		<p>Contact me below, I'd love to chat!</p>
+		<ul class="icons">
+			<li><a href="https://twitter.com/fielddaytoronto" class="twitter-icon"><span></span></a></li>
+			<li><a href="https://www.facebook.com/rachel.borgh" class="facebook-icon"><span></span></a></li>
+			<li><a href="#" class="instagram-icon"><span></span></a></li>
+			<li><a href="mailto:rachel.fieldday@gmail.com" class="envelope-icon"><span></span></a></li>							
+		</ul>
+	</section> <!-- end of footer-contact -->
+	<section class="copyright">
+		<ul class="copyright-menu">
+			<li>&copy; Rachel Borgh. All rights reserved.</li>
+			<li>Design by <a href="http://html5up.net/">HTML5 UP</a></li>
+			<li>All the nice photographs by <a href="#">Heidi Athay</a></li>
+			<li>Development by <a href="https://www.github.com/jaredphillips">Jared Phillips</a></li>
+		</ul>
+	</section>
+</footer>
 
-		<!-- Footer -->
-			<div id="footer">
-				<div class="container">
-
-					<div class="row">
-						<div class="12u">
-							
-							<!-- Contact -->
-								<section class="contact">
-									<header>
-										<h3>Interested in purchasing a terrarium or even learning how its done?</h3>
-									</header>
-									<p>Contact me below, I'd love to chat!</p>
-									<ul class="icons">
-										<li><a href="https://twitter.com/fielddaytoronto" class="fa fa-twitter solo"><span></span></a></li>
-										<li><a href="https://www.facebook.com/rachel.borgh" class="fa fa-facebook solo"><span></span></a></li>
-										<li><a href="#" class="fa fa-instagram"><span></span></a></li>
-										<li><a href="mailto:rachel.fieldday@gmail.com" class="fa fa-envelope"><span></span></a></li>										
-									</ul>
-								</section>
-							
-							<!-- Copyright -->
-								<div class="copyright">
-									<ul class="menu">
-										<li>&copy; Rachel Borgh. All rights reserved.</li>
-										<li>Design by <a href="http://html5up.net/">HTML5 UP</a></li>
-										<li>All the nice photographs by <a href="#">Heidi Athay</a></li>
-										<li>Development by <a href="https://www.github.com/jaredphillips">Jared Phillips</a></li>
-									</ul>
-								</div>
-							
-						</div>
-					
-					</div>
-				</div>
-			</div>
-
-
-
-
-
-	</body>
-</html>
