header moved out into partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
   <%= auto_discovery_link_tag :atom, "/posts.atom" %>
 </head>
 <body>
-
-<%= yield %>
+	<%= render 'layouts/header' %>
+	<%= yield %>
 
 </body>
 </html>
