care page markup complete - rough

--- a/app/views/pages/care.html.erb
+++ b/app/views/pages/care.html.erb
@@ -1,2 +1,48 @@
-<h1>Pages#care</h1>
-<p>Find me in app/views/pages/care.html.erb</p>
+<h2>Everybody likes a low-maintenance house guest. In general, succulents and cacti are quite independent and stand-offish and don’t require a ton of attention...just a little water and light.</h2>
+
+<p>Image here.</p>
+
+<p><span class="care-heading">Water</span> - Nobody likes a cold shower...your terrarium is happiest with room temperature water. In growing season (spring to fall), water once a week with ½ to 1 shot glass of water (filtered is better). During dormant season (winter), water once a month or so with ½ to 1 shot glass of water. Always allow the soil to dry out between waterings please.</p>
+
+<p><span class="care-em">Signs your terrarium is getting too much water</span> - Your plants are looking soft and discoloured, possibly sporting translucent leaves.</p>
+
+<p><span class="care-em">Signs your terrarium is getting too little water</span> - Your plant is shedding leaves or pesky brown spots are appearing on the leaves.</p>
+
+<p>Image here.</p>
+
+<p><span class="care-heading">Light</span> - Your terrarium thrives in bright, indirect sunlight; in a window is nice.</p>
+
+<p><span class="care-em">Signs your terrarium is getting too much light</span> - The leaves are literally scorched or have a bleached out or yellowed look. We want vibrant colour!</p>
+
+<p><span class="care-em">Signs your terrarium is getting too little light</span> - Your plants are desperately stretching towards a light source, reaching with all their might.</p>
+
+<h2>Caring for your air plant (Tillandsia) is also pretty easy peasy. Again, just light and water.</h2>
+
+<p>Image here.</p>
+
+<p><span class="care-heading">Water</span> - Air plants like morning baths and mists. Place plants in a bowl or on a plate of water for 2 hours every 2 or 3 weeks. In between baths, lightly mist the plants a few times a week; 1 or 2 squirts from a spray bottle should do the trick. Be sure to shake excess water off so the poor things don’t rot and stay away from distilled or softened water.</p>
+
+<p>Don’t be afraid to get to know your air plant...give it a little feel. After a drink, the leaves will feel stiff and full of water. When thirsty, the leaves will feel softer and will appear lighter in colour.</p>
+
+<p><span class="care-em">Signs your air plant is getting too little water</span> - The leaves will be flaccid, wrinkled or rolled.</p>
+
+<p><span class="care-heading">Light</span> - Air plants enjoy bright, filtered light, so no dark corners (as if you would hide these little beauties in the dark!).</p>
+
+<p>Image here.</p>
+
+<h2>I have listened and, although I believe in you and know you are more than capable of keeping a succulent and/or cactus terrarium alive and happy, I have started making all-moss terrariums, which require almost NO MAINTENANCE. You read that right…no need to worry about water or special light or temperature conditions for moss! Dream come true, right?</h2>
+
+<p><span class="care-heading">Water</span> – Less is more. Moss has a high tolerance for dehydration. If your moss terrarium looks good, leave it alone. If you notice it looking a little dry or less vibrant, you can mist it with a little water, but no need to drench it since moss has no root system.</p>
+
+<p>If possible, distilled or rain water is preferred since chlorine and other minerals can sometimes brown the moss. I just use tap water, which sits out in a jug overnight to dechlorinate it. It works fine.</p>
+
+<p><span class="care-em">Signs your moss terrarium is getting too much water</span> - Over-watering could lead to mould. Yuck.</p>
+
+<p><span class="care-heading">Light</span> – Direct sunlight cooks moss, which is not recommended. So, indirect or filtered light is best. Moss will even thrive under artificial light conditions, which makes it ideal for your office desk!!</p>
+
+<p><span class="care-heading">Temperature</span> – Regular old room temperature works for moss, just like it works for you</p>
+
+
+
+
+
