--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="nav-top">
 		<ul>
 			<li><%= link_to "Home", root_path %></li>
-			<li><%= link_to "Blog", posts_path %></li>
+			<li><%= link_to "Blog", blog_path %></li>
 			<li><%= link_to "Come See Me", events_path %></li>
 			<li><%= link_to "Terrarium Care", pages_care_path %></li>
 			<li><%= link_to "Contact", pages_contact_path %></li>
