finished user signup

--- a/app/views/pages/care.html.erb
+++ b/app/views/pages/care.html.erb
@@ -1,3 +1,4 @@
+<%= provide(:title, "Care") %>
 <h2>Everybody likes a low-maintenance house guest. In general, succulents and cacti are quite independent and stand-offish and don’t require a ton of attention...just a little water and light.</h2>
 
 <p>Image here.</p>
