--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<%= provide(:title, "Home") %>
+
 <div class="main-banner">
 	<img class="me" src="images/me.jpg">
 	<h2>I love making terrariums. I can’t stop making terrariums. My home is becoming one big terrarium. Time to share these little creations...with you!</h2>
