styling for main div on home page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="header">
   <nav class="nav-top">
-		<ul>
+		<ul class="nav-list">
 			<li><%= link_to "Home", root_path %></li>
 			<li><%= link_to "Blog", blog_path %></li>
 			<li><%= link_to "Come See Me", events_path %></li>
@@ -14,7 +14,9 @@
 
 	<div class="nav-bottom">
 		<h1>Field Day Terrariums</h1>
-			<p>Miniature Worlds by Rachel Borgh</p>
-			<a href="#" class="button">Hello</a>
+		<p>Miniature Worlds by Rachel Borgh</p>
+		<div class="button-container">
+			<a href="#main-banner" class="button">Hello</a>
+		</div>
 	</div>
 </div>
