--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
 <%= provide(:title, "Home") %>
 
-<div class="main-banner">
-	<img class="me" src="images/me.jpg">
+<div class="main-banner" id="main-banner">
+	<div class="photo-container">
+		<%= image_tag "me.jpg", class: "me" %>
+	</div>
 	<h2>I love making terrariums. I can’t stop making terrariums. My home is becoming one big terrarium. Time to share these little creations...with you!</h2>
 	<p>
 		Terrariums provide a platform upon which my idealistic dreams can come true!  Taking pieces from the environment at large and manipulating them into a small container where they will thrive and establish their own, separate environment is fascinating and inspiring to me.  
@@ -12,31 +14,31 @@
 <div class="carousel-container">
 	<div class="carousel">
 		<article>
-			<img src="images/pic04.jpg" alt="" />
+			<img src="pic04.jpg" alt="" />
 			<h3>Finished Environments</h3>
 			<p>Here are some examples of terrariums ready for your home. Maybe for your bookcase, desk or counter.</p>
 		</article>
 
 		<article>
-			<img src="images/pic05.jpg" alt="" />
+			<img src="pic05.jpg" alt="" />
 			<h3>Caring for Your New Terrarium</h3>
 			<p>Everything you need to know to keep your new little world healthy, happy and beautiful.</a></p>
 		</article>
 
 		<article>
-			<img src="images/pic01.jpg" alt="" />
+			<img src="pic01.jpg" alt="" />
 			<h3>A Work in Progress</h3>
 			<p>I’m working to make dirt under the fingernails the newest and hottest look this season.</p>
 		</article>
 				
 		<article>
-			<img src="images/pic02.jpg" alt="" />
+			<img src="pic02.jpg" alt="" />
 			<h3>My Tools</h3>
 			<p>A variety of tools collected from all over the place help with production.  Get creative!</p>
 		</article>
 
 		<article>
-			<img src="images/pic03.jpg" alt="" />
+			<img src="pic03.jpg" alt="" />
 			<h3>Scenes</h3>
 			<p>Miniature people doing miniature things combined with elements straight from nature.</p>
 		</article>
@@ -48,51 +50,51 @@
 		<h2>Finished Environments</h2>
 		<div class="row">
 			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="images/finished_one_large.jpg"><img src="images/finished_one_small.jpg" alt="" /></a>
+				<a class="fancybox" rel="group" href="finished_one_large.jpg"><img src="finished_one_small.jpg" alt="" /></a>
 				<h3>Bee Keepers in Sand</h3>
 			</article>
 
 			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="images/finished_two_large.jpg"><img src="images/finished_two_small.jpg" alt="" /></a>
+				<a class="fancybox" rel="group" href="finished_two_large.jpg"><img src="finished_two_small.jpg" alt="" /></a>
 				<h3>Lone Woman</h3>
 			</article>
 
 			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="images/finished_three_large.jpg"><img src="images/finished_three_small.jpg" alt="" /></a>
+				<a class="fancybox" rel="group" href="finished_three_large.jpg"><img src="finished_three_small.jpg" alt="" /></a>
 				<h3>Pretty Pink</h3>
 			</article>
 		</div> <!-- end of row -->
 
 		<div class="row">
 			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="images/finished_four_large.jpg"><img src="images/finished_four_small.jpg" alt="" /></a>
+				<a class="fancybox" rel="group" href="finished_four_large.jpg"><img src="finished_four_small.jpg" alt="" /></a>
 				<h3>Minor Miners</h3>
 			</article>
 
 			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="images/finished_five_large.jpg"><img src="images/finished_five_small.jpg" alt="" /></a>
+				<a class="fancybox" rel="group" href="finished_five_large.jpg"><img src="finished_five_small.jpg" alt="" /></a>
 				<h3>Mourners</h3>
 			</article>
 
 			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="images/finished_six_large.jpg"><img src="images/finished_six_small.jpg" alt="" /></a>
+				<a class="fancybox" rel="group" href="finished_six_large.jpg"><img src="finished_six_small.jpg" alt="" /></a>
 				<h3>Bee Keepers</h3>
 			</article>
 		</div> <!-- end of row -->
 
 		<div class="row">
 			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="images/finished_seven_large.jpg"><img src="images/finished_seven_small.jpg" alt="" /></a>
+				<a class="fancybox" rel="group" href="finished_seven_large.jpg"><img src="finished_seven_small.jpg" alt="" /></a>
 				<h3>Bathing Beauty</h3>
 			</article>
 
 			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="images/finished_eight_large.jpg"><img src="images/finished_eight_small.jpg" alt="" /></a>
+				<a class="fancybox" rel="group" href="finished_eight_large.jpg"><img src="finished_eight_small.jpg" alt="" /></a>
 				<h3>Barnacles</h3>
 			</article>
 
 			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="images/finished_nine_large.jpg"><img src="images/finished_nine_small.jpg" alt="" /></a>
+				<a class="fancybox" rel="group" href="finished_nine_large.jpg"><img src="finished_nine_small.jpg" alt="" /></a>
 				<h3>Dig</h3>
 			</article>
 		</div> <!-- end of row -->
