--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,3 +1,135 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// Place all the styles related to the pages controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+
+// @import "bootstrap-sprockets";
+// @import "bootstrap";
+// @import "owl.carousel";
+// @import "owl.theme";
+
+
+@font-face{font-family:'FontAwesome';src:url('font/fontawesome-webfont.eot?v=4.0.1');src:url('font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
+
+$pink: #FFC0CB;
+ 
+
+div.header {
+	background: url("bg.jpg") no-repeat center center fixed;
+	background-size: cover;
+	height: 800px;
+	font-family: 'Source Sans Pro', sans-serif;
+}
+
+
+ul.nav-list {
+	list-style-type: none;
+	margin: 0;
+	padding: 42px 0;
+	text-align: center;
+	li {
+		display: inline;
+		a {
+			font-family: 'Source Sans Pro', sans-serif;
+			font-weight: 300;
+			font-size: 1.6em;
+			text-decoration: none;
+			color: $pink;
+			display: inline-block;
+			padding: 0 29px;
+		}
+	}
+}
+
+div.nav-bottom {
+	margin: 50px auto;
+	display: block;
+	text-align: center;
+	width: 50%;
+	h1 {
+		font-family: 'Source Sans Pro', sans-serif;
+		line-height: 1.25em;
+		font-weight: 400;
+		color: white;
+		font-size: 6.5em;
+		border-bottom: 1px solid #FFC0CB;
+		padding-bottom: 30px;
+	}
+	p {
+		font-family: 'Source Sans Pro', sans-serif;
+		font-weight: 300;
+		color: white;
+		font-size: 1.9em;
+	}
+	div.button-container {
+		margin: 40px auto 0 auto;
+		display: block;
+		width: 110px;
+		height: 110px;
+		background-color: #df7366;
+		border-radius: 50%;
+		transition: .5s;
+		a.button {			
+			color: white;
+			line-height: 110px;
+			font-size: 1.8em;
+			text-decoration: none;
+		}
+		a.button:hover {
+			background-color: #e58d82;
+			transition: .5s;
+		}
+	}
+	div.button-container:hover {
+		background-color: #e58d82;
+		transition: .5s;
+	}
+}
+
+div.main-banner {
+	height: 850px;
+	background-color: #FFFFFF;
+	div.photo-container {
+		.me {
+			height: 230px;
+			width: 230px;
+			padding: 15px;
+			border: 5px solid #FDF4E4;
+			border-radius: 50%;
+			display: block;
+			margin: 80px auto 20px auto;
+		}
+	}
+	h2 {
+		margin: 0 40px 0 40px;
+		text-align: center;
+		font-size: 4.4em;
+		line-height: 1.3em;
+		font-family: 'Source Sans Pro', sans-serif;
+		font-weight: 400;
+	}
+	p {
+		margin: 30px 20px 0 20px;
+		text-align: center;
+		font-family: 'Source Sans Pro', sans-serif;
+		font-weight: 300;
+		font-size: 2.3em;
+		line-height: 1.8em;
+	}
+}
+
+div.carousel-container {
+	background-color: #F0F4F4;
+	div.carousel {
+		article {
+			.carousel-photo {
+				height: 400px;
+			}
+			h3 {}
+			p {}
+		}
+	}
+}
