--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -122,13 +122,28 @@ div.main-banner {
 }
 
 div.carousel-container {
-	div.carousel {
-		div.carousel-item {
-			img.carousel-photo {
+	background-color: #F0F4F4;
+	height: 600px;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	width: 2100px;
+	ul.carousel {
+		list-style-type: none;
+		li {
+			display: inline-block;
+			div.carousel-item {
+				width: 400px;
+				img.carousel-photo {
 				height: 300px;
+				}
+				h3 {
+					text-align: center;
+					width: 400px;
+				}
+				p {
+					width: 400px;
+				}
 			}
-			h3 {}
-			p {}
 		}
 	}
 }
