--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,39 +14,49 @@
 <div class="carousel-container">
 	<ul class="carousel">
 		<li>
-			<div class="carousel-item">
-				<%= image_tag "carousel-1.jpg", class: "carousel-photo", alt: "carousel-photo"%>
-				<h3>Finished Environments</h3>
-				<p>Here are some examples of terrariums ready for your home. Maybe for your bookcase, desk or counter.</p>
-			</div>
+			<a href="#" class="carousel-link">
+				<div class="carousel-item">
+					<%= image_tag "carousel-1.jpg", class: "carousel-photo", alt: "carousel-photo"%>
+					<h3>Finished Environments</h3>
+					<p>Here are some examples of terrariums ready for your home. Maybe for your bookcase, desk or counter.</p>
+				</div>
+			</a>
 		</li>
 		<li>
-			<div class="carousel-item">
-				<%= image_tag "carousel-2.jpg", class: "carousel-photo", alt: "carousel-photo"%>
-				<h3>Caring for Your New Terrarium</h3>
-				<p>Everything you need to know to keep your new little world healthy, happy and beautiful.</p>
-			</div>
+			<a href="#" class="carousel-link">
+				<div class="carousel-item">
+					<%= image_tag "carousel-2.jpg", class: "carousel-photo", alt: "carousel-photo"%>
+					<h3>Caring for Your New Terrarium</h3>
+					<p>Everything you need to know to keep your new little world healthy, happy and beautiful.</p>
+				</div>
+			</a>
 		</li>
 		<li>
-			<div class="carousel-item">
-				<%= image_tag "carousel-3.jpg", class: "carousel-photo", alt: "carousel-photo"%>
-				<h3>A Work in Progress</h3>
-				<p>I’m working to make dirt under the fingernails the newest and hottest look this season.</p>
-			</div>
+			<a href="#" class="carousel-link">
+				<div class="carousel-item">
+					<%= image_tag "carousel-3.jpg", class: "carousel-photo", alt: "carousel-photo"%>
+					<h3>A Work in Progress</h3>
+					<p>I’m working to make dirt under the fingernails the newest and hottest look this season.</p>
+				</div>
+			</a>
 		</li>
 		<li>
-			<div class="carousel-item">
-				<%= image_tag "carousel-4.jpg", class: "carousel-photo", alt: "carousel-photo"%>
-				<h3>My Tools</h3>
-				<p>A variety of tools collected from all over the place help with production. Get creative!</p>
-			</div>
+			<a href="#" class="carousel-link">
+				<div class="carousel-item">
+					<%= image_tag "carousel-4.jpg", class: "carousel-photo", alt: "carousel-photo"%>
+					<h3>My Tools</h3>
+					<p>A variety of tools collected from all over the place help with production. Get creative!</p>
+				</div>
+			</a>
 		</li>
 		<li>
-			<div class="carousel-item">
-				<%= image_tag "carousel-5.jpg", class: "carousel-photo", alt: "carousel-photo"%>
-				<h3>Scenes</h3>
-				<p>Miniature people doing miniature things combined with elements straight from nature.</p>
-			</div>
+			<a href="#" class="carousel-link">
+				<div class="carousel-item">
+					<%= image_tag "carousel-5.jpg", class: "carousel-photo", alt: "carousel-photo"%>
+					<h3>Scenes</h3>
+					<p>Miniature people doing miniature things combined with elements straight from nature.</p>
+				</div>
+			</a>
 		</li>
 	</ul>
 </div>
