finished works section basic styling done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -61,58 +61,62 @@
 	</ul>
 </div>
 			
-<div class="showcase-wrapper">	
-	<section class="showcase">
-		<h2>Finished Environments</h2>
-		<div class="row">
-			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="finished_one_large.jpg"><img src="finished_one_small.jpg" alt="" /></a>
+<section class="showcase">
+	<h2>Finished Environments</h2>
+	<ul class="rows">
+		<li>
+			<div class="finished-example">
+				<%= image_tag "finished_one_small.jpg", class: "finished-images-small" %>
 				<h3>Bee Keepers in Sand</h3>
-			</article>
-
-			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="finished_two_large.jpg"><img src="finished_two_small.jpg" alt="" /></a>
+			</div>
+		</li>
+		<li>
+			<div class="finished-example">
+				<%= image_tag "finished_two_small.jpg", class: "finished-images-small" %>
 				<h3>Lone Woman</h3>
-			</article>
-
-			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="finished_three_large.jpg"><img src="finished_three_small.jpg" alt="" /></a>
+			</div>
+		</li>
+		<li>
+			<div class="finished-example">
+				<%= image_tag "finished_three_small.jpg", class: "finished-images-small" %>
 				<h3>Pretty Pink</h3>
-			</article>
-		</div> <!-- end of row -->
-
-		<div class="row">
-			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="finished_four_large.jpg"><img src="finished_four_small.jpg" alt="" /></a>
+			</div>
+		</li>
+		<li>
+			<div class="finished-example">
+				<%= image_tag "finished_four_small.jpg", class: "finished-images-small" %>
 				<h3>Minor Miners</h3>
-			</article>
-
-			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="finished_five_large.jpg"><img src="finished_five_small.jpg" alt="" /></a>
+			</div>
+		</li>
+		<li>
+			<div class="finished-example">
+				<%= image_tag "finished_five_small.jpg", class: "finished-images-small" %>
 				<h3>Mourners</h3>
-			</article>
-
-			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="finished_six_large.jpg"><img src="finished_six_small.jpg" alt="" /></a>
+			</div>
+		</li>
+		<li>
+			<div class="finished-example">
+				<%= image_tag "finished_six_small.jpg", class: "finished-images-small" %>
 				<h3>Bee Keepers</h3>
-			</article>
-		</div> <!-- end of row -->
-
-		<div class="row">
-			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="finished_seven_large.jpg"><img src="finished_seven_small.jpg" alt="" /></a>
+			</div>
+		</li>
+		<li>
+			<div class="finished-example">
+				<%= image_tag "finished_seven_small.jpg", class: "finished-images-small" %>
 				<h3>Bathing Beauty</h3>
-			</article>
-
-			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="finished_eight_large.jpg"><img src="finished_eight_small.jpg" alt="" /></a>
+			</div>
+		</li>
+		<li>
+			<div class="finished-example">
+				<%= image_tag "finished_eight_small.jpg", class: "finished-images-small" %>
 				<h3>Barnacles</h3>
-			</article>
-
-			<article class="single-showcase">
-				<a class="fancybox" rel="group" href="finished_nine_large.jpg"><img src="finished_nine_small.jpg" alt="" /></a>
+			</div>
+		</li>
+		<li>
+			<div class="finished-example">
+				<%= image_tag "finished_nine_small.jpg", class: "finished-images-small" %>
 				<h3>Dig</h3>
-			</article>
-		</div> <!-- end of row -->
-	</section> <!-- end of showcase -->
-</div>	<!-- end of showcase-wrapper -->
+			</div>
+		</li>
+	</ul>
+</section>
