--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -169,3 +169,39 @@ div.carousel-container {
 		}
 	}
 }
+
+section.showcase {
+	background-color: white;
+	h2 {
+		text-align: center;
+		font-family: 'Source Sans Pro', sans-serif;
+		font-weight: 400;
+		padding-top: 80px;
+		font-size: 4.6em;
+		padding-bottom: 60px;
+	}
+	ul.rows {
+		list-style-type: none;
+		li {
+		display: inline-block;
+		width: 33%;
+			div.finished-example {
+				img.finished-images-small {
+					border-radius: 50%;
+					display: block;
+					margin: 0 auto;
+					padding: 10px;
+					border: 3px solid $pink;
+					margin-bottom: 30px;
+				}
+				h3 {
+					text-align: center;
+					font-family: 'Source Sans Pro', sans-serif;
+					font-weight: 400;
+					font-size: 2em;
+					margin-bottom: 90px;
+				}
+			}
+		}
+	}
+}
