fancybox working for main page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -65,58 +65,76 @@
 	<h2>Finished Environments</h2>
 	<ul class="rows">
 		<li>
-			<div class="finished-example">
-				<%= image_tag "finished_one_small.jpg", class: "finished-images-small" %>
-				<h3>Bee Keepers in Sand</h3>
-			</div>
+			<a href="<%= image_path('finished_one_large.jpg')%>", rel="group", class="fancybox">
+				<div class="finished-example">
+					<%= image_tag "finished_one_small.jpg", class: "finished-images-small" %>
+					<h3>Bee Keepers in Sand</h3>
+				</div>
+			</a>
 		</li>
 		<li>
-			<div class="finished-example">
-				<%= image_tag "finished_two_small.jpg", class: "finished-images-small" %>
-				<h3>Lone Woman</h3>
-			</div>
+			<a href="<%= image_path('finished_two_large.jpg')%>", class="fancybox", rel="group">
+				<div class="finished-example">
+					<%= image_tag "finished_two_small.jpg", class: "finished-images-small" %>
+					<h3>Lone Woman</h3>
+				</div>
+			</a>
 		</li>
 		<li>
-			<div class="finished-example">
-				<%= image_tag "finished_three_small.jpg", class: "finished-images-small" %>
-				<h3>Pretty Pink</h3>
-			</div>
+			<a href="<%= image_path('finished_three_large.jpg')%>", class="fancybox", rel="group">
+				<div class="finished-example">
+					<%= image_tag "finished_three_small.jpg", class: "finished-images-small" %>
+					<h3>Pretty Pink</h3>
+				</div>
+			</a>
 		</li>
 		<li>
-			<div class="finished-example">
-				<%= image_tag "finished_four_small.jpg", class: "finished-images-small" %>
-				<h3>Minor Miners</h3>
-			</div>
+			<a href="<%= image_path('finished_four_large.jpg')%>", class="fancybox", rel="group">
+				<div class="finished-example">
+					<%= image_tag "finished_four_small.jpg", class: "finished-images-small" %>
+					<h3>Minor Miners</h3>
+				</div>
+			</a>
 		</li>
 		<li>
-			<div class="finished-example">
-				<%= image_tag "finished_five_small.jpg", class: "finished-images-small" %>
-				<h3>Mourners</h3>
-			</div>
+			<a href="<%= image_path('finished_five_large.jpg')%>", class="fancybox", rel="group">
+				<div class="finished-example">
+					<%= image_tag "finished_five_small.jpg", class: "finished-images-small" %>
+					<h3>Mourners</h3>
+				</div>
+			</a>
 		</li>
 		<li>
-			<div class="finished-example">
-				<%= image_tag "finished_six_small.jpg", class: "finished-images-small" %>
-				<h3>Bee Keepers</h3>
-			</div>
+			<a href="<%= image_path('finished_six_large.jpg')%>", class="fancybox", rel="group">
+				<div class="finished-example">
+					<%= image_tag "finished_six_small.jpg", class: "finished-images-small" %>
+					<h3>Bee Keepers</h3>
+				</div>
+			</a>
 		</li>
 		<li>
-			<div class="finished-example">
-				<%= image_tag "finished_seven_small.jpg", class: "finished-images-small" %>
-				<h3>Bathing Beauty</h3>
-			</div>
+			<a href="<%= image_path('finished_seven_large.jpg')%>", class="fancybox", rel="group">
+				<div class="finished-example">
+					<%= image_tag "finished_seven_small.jpg", class: "finished-images-small" %>
+					<h3>Bathing Beauty</h3>
+				</div>
+			</a>
 		</li>
 		<li>
-			<div class="finished-example">
-				<%= image_tag "finished_eight_small.jpg", class: "finished-images-small" %>
-				<h3>Barnacles</h3>
-			</div>
+			<a href="<%= image_path('finished_eight_large.jpg')%>" class="fancybox">
+				<div class="finished-example">
+					<%= image_tag "finished_eight_small.jpg", class: "finished-images-small" %>
+					<h3>Barnacles</h3>
+				</div>
+			</a>
 		</li>
 		<li>
-			<div class="finished-example">
-				<%= image_tag "finished_nine_small.jpg", class: "finished-images-small" %>
-				<h3>Dig</h3>
-			</div>
+			<a href="<%= image_path('finished_nine_large.jpg')%>" class="fancybox">
+				<div class="finished-example">
+					<%= image_tag "finished_nine_small.jpg", class: "finished-images-small" %>
+					<h3>Dig</h3>
+				</div>
+			</a>
 		</li>
 	</ul>
 </section>
