--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -185,23 +185,32 @@ section.showcase {
 		li {
 		display: inline-block;
 		width: 33%;
-			div.finished-example {
-				img.finished-images-small {
-					border-radius: 50%;
-					display: block;
-					margin: 0 auto;
-					padding: 10px;
-					border: 3px solid $pink;
-					margin-bottom: 30px;
-				}
-				h3 {
-					text-align: center;
-					font-family: 'Source Sans Pro', sans-serif;
-					font-weight: 400;
-					font-size: 2em;
-					margin-bottom: 90px;
-				}
-			}
 		}
 	}
 }
+
+a.fancybox {
+	text-decoration: none;	
+	div.finished-example {
+		img.finished-images-small {
+			border-radius: 50%;
+			display: block;
+			margin: 0 auto;
+			padding: 15px;
+			border: 4px solid rgb(253, 244, 228);
+			margin-bottom: 30px;
+		}
+		h3 {
+			text-align: center;
+			font-family: 'Source Sans Pro', sans-serif;
+			font-weight: 400;
+			font-size: 2em;
+			margin-bottom: 90px;
+		}
+	}
+}
+
+a.fancybox:hover {
+	color: black;
+}
+
