styling and fixed the scaffold overrides

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,11 +3,29 @@
 		<h3>Interested in purchasing a terrarium or even learning how its done?</h3>
 		<p>Contact me below, I'd love to chat!</p>
 		<ul class="icons">
-			<li><a href="https://twitter.com/fielddaytoronto" class="twitter-icon"><span></span></a></li>
-			<li><a href="https://www.facebook.com/rachel.borgh" class="facebook-icon"><span></span></a></li>
-			<li><a href="#" class="instagram-icon"><span></span></a></li>
-			<li><a href="mailto:rachel.fieldday@gmail.com" class="envelope-icon"><span></span></a></li>							
+			<li>
+				<a href="https://twitter.com/fielddaytoronto" class="icon first" target="_blank">
+					<i class="fa fa-twitter"></i>
+				</a>
+			</li>
+			<li>
+				<a href="https://www.facebook.com/rachel.borgh" class="icon" target="_blank">
+					<i class="fa fa-facebook"></i>
+				</a>
+			</li>
+			<li>
+				<a href="#" class="icon" target="_blank">
+					<i class="fa fa-instagram"></i>
+				</a>
+			</li>
+
+			<li>
+				<a href="mailto:rachel.fieldday@gmail.com" class="icon last">
+				  <i class="fa fa-envelope"></i>
+				</a>
+			</li>
 		</ul>
+		
 	</section> <!-- end of footer-contact -->
 	<section class="copyright">
 		<ul class="copyright-menu">
