--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -15,13 +15,16 @@
 @font-face{font-family:'FontAwesome';src:url('font/fontawesome-webfont.eot?v=4.0.1');src:url('font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
 
 $pink: #FFC0CB;
+
+body {
+	font-family: 'Source Sans Pro', sans-serif;
+}
  
 
 div.header {
 	background: url("bg.jpg") no-repeat center center fixed;
 	background-size: cover;
 	height: 800px;
-	font-family: 'Source Sans Pro', sans-serif;
 }
 
 
@@ -33,9 +36,8 @@ ul.nav-list {
 	li {
 		display: inline;
 		a {
-			font-family: 'Source Sans Pro', sans-serif;
 			font-weight: 300;
-			font-size: 1.6em;
+			font-size: 1.5em;
 			text-decoration: none;
 			color: $pink;
 			display: inline-block;
@@ -45,24 +47,22 @@ ul.nav-list {
 }
 
 div.nav-bottom {
-	margin: 50px auto;
+	margin: 90px auto;
 	display: block;
 	text-align: center;
-	width: 50%;
+	width: 55%;
 	h1 {
-		font-family: 'Source Sans Pro', sans-serif;
 		line-height: 1.25em;
 		font-weight: 400;
 		color: white;
-		font-size: 6.5em;
+		font-size: 5.2em;
 		border-bottom: 1px solid #FFC0CB;
 		padding-bottom: 30px;
 	}
 	p {
-		font-family: 'Source Sans Pro', sans-serif;
 		font-weight: 300;
 		color: white;
-		font-size: 1.9em;
+		font-size: 1.6em;
 	}
 	div.button-container {
 		margin: 40px auto 0 auto;
@@ -72,10 +72,11 @@ div.nav-bottom {
 		background-color: #df7366;
 		border-radius: 50%;
 		transition: .5s;
-		a.button {			
+		a.button {		
+			font-weight: 300;	
 			color: white;
 			line-height: 110px;
-			font-size: 1.8em;
+			font-size: 1.5em;
 			text-decoration: none;
 		}
 		a.button:hover {
@@ -106,18 +107,16 @@ div.main-banner {
 	h2 {
 		margin: 0 40px 0 40px;
 		text-align: center;
-		font-size: 4.4em;
+		font-size: 3.6em;
 		line-height: 1.3em;
-		font-family: 'Source Sans Pro', sans-serif;
 		font-weight: 400;
 	}
 	p {
-		margin: 30px 20px 0 20px;
+		margin: 30px 10px 0 10px;
 		text-align: center;
-		font-family: 'Source Sans Pro', sans-serif;
 		font-weight: 300;
-		font-size: 2.3em;
-		line-height: 1.8em;
+		font-size: 2em;
+		line-height: 1.5em;
 	}
 }
 
@@ -141,24 +140,22 @@ div.carousel-container {
 					margin: 30px 10px;
 					width: 400px;
 					img.carousel-photo {
-					height: 300px;
+						height: 300px;
 					}
 					h3 {
 						margin-top: 50px;
 						text-align: center;
 						width: 400px;
-						font-size: 2em;
+						font-size: 1.4em;
 						font-weight: 400;
-						font-family: 'Source Sans Pro', sans-serif;
 					}
 					p {
 						white-space: normal;
 						text-align: center;
-						line-height: 2.5em;
+						line-height: 1.9em;
 						font-weight: 300;
 						width: 400px;
-						font-size: 1.4em;
-						font-family: 'Source Sans Pro', sans-serif;
+						font-size: 1.1em;
 					}
 				}
 			}
@@ -174,7 +171,6 @@ section.showcase {
 	background-color: white;
 	h2 {
 		text-align: center;
-		font-family: 'Source Sans Pro', sans-serif;
 		font-weight: 400;
 		padding-top: 80px;
 		font-size: 4.6em;
@@ -202,10 +198,10 @@ a.fancybox {
 		}
 		h3 {
 			text-align: center;
-			font-family: 'Source Sans Pro', sans-serif;
 			font-weight: 400;
 			font-size: 2em;
 			margin-bottom: 90px;
+			color: black;
 		}
 	}
 }
@@ -213,4 +209,48 @@ a.fancybox {
 a.fancybox:hover {
 	color: black;
 }
+
+footer {
+	height: 580px;
+	background-color: #2B252C;
+	border-top: 40px solid #F0F4F4;
+}
+
+section.footer-contact {
+	margin-top: 130px;
+	h3 {
+		font-weight: 400;
+		font-size: 2em;
+		color: white;
+		text-align: center;
+		margin-bottom: 40px;
+	}
+	p {
+		color: $pink;
+		font-weight: 300;
+		font-size: 1.7em;
+		text-align: center;
+	}
+	ul.icons {
+		background-color: #2E292F;
+		list-style-type: none;
+		margin: 90px auto;
+		width: 500px;
+		li {
+			padding: 20px 40px;
+			display: inline-block;
+			a.icon {
+				font-size: 3em;
+				color: white;
+				transition: .5s;
+			}
+		}
+		a.icon:hover {
+			color: $pink;
+			background-color: #2E292F;
+			transition: .5s;
+		}
+	}
+}
+
 
