--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -31,8 +31,8 @@
 		<ul class="copyright-menu">
 			<li>&copy; Rachel Borgh. All rights reserved.</li>
 			<li>Design by <a href="http://html5up.net/">HTML5 UP</a></li>
-			<li>All the nice photographs by <a href="#">Heidi Athay</a></li>
-			<li>Development by <a href="https://www.github.com/jaredphillips">Jared Phillips</a></li>
+			<li>All the nice photographs by <a href="https://www.facebook.com/heidi.athay">Heidi Athay</a></li>
+			<li>Rails Development by <a href="http://www.jaredphillips.io">Jared Phillips</a></li>
 		</ul>
 	</section>
 </footer>
