--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
 		<h1>Field Day Terrariums</h1>
 		<p>Miniature Worlds by Rachel Borgh</p>
 		<div class="button-container">
-			<a href="#main-banner" class="button">Hello</a>
+			<a href="#main-banner" id="smooth" class="button">Hello</a>
 		</div>
 	</div>
 </div>
