--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
   <%= auto_discovery_link_tag :atom, "/posts.atom" %>
 </head>
 <body>
-	<%= render 'layouts/header' %>
+  <% if request.env['PATH_INFO'] == root_path %>
+  	<%= render 'layouts/header' %>
+  <% else %>
+    <%= render 'layouts/alternate_header' %>
+  <% end %>
 	<% flash.each do |key, value| %>
     <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
