--- a/app/views/layouts/_alternate_header.html.erb
+++ b/app/views/layouts/_alternate_header.html.erb
@@ -4,10 +4,16 @@
 			<li><%= link_to "Home", root_path %></li>
 			<li><%= link_to "Blog", blog_path %></li>
 			<li><%= link_to "Come See Me", events_path %></li>
-			<li><%= link_to "Terrarium Care", pages_care_path %></li>
+			<li><%= link_to "Terrarium Care", terrarium_care_path %></li>
+			<li><%= link_to "Gallery", pages_gallery_path %></li>
 			<li><%= link_to "Contact", pages_contact_path %></li>
 			<% if signed_in? %>
-				<%= link_to "Sign out", signout_path, method: "delete" %>
+				<li>
+					<%= link_to "Settings", edit_user_path(current_user) %>
+				</li>
+				<li>
+					<%= link_to "Sign out", signout_path, method: "delete" %>
+				</li>
 			<% end %>
 		</ul>
 	</nav>
