--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,20 @@
 <%= provide(:title, "Blog") %>
-<h2>Blog</h2>
-
-<% @posts.each do |post| %>
-  <h3><%= link_to post.title, post %></h3>
-  <h4><%= post.byline %></h4>
-  <p>Posted: <%= time_ago_in_words post.created_at %> ago</p>
-  <p>
-    <%= link_to 'Show', post %> | 
-    <%= link_to 'Edit', edit_post_path(post) %> | 
-    <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %> 
-  </p>
-<% end %>
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+<div class="blog-container">
+	<% if signed_in? %>
+		<%= link_to 'New Post', new_post_path, class: "new-post-button" %>
+	<% end %>
+	<% @posts.each do |post| %>
+	  <h2 class="title">
+		  <%= link_to post.title, post, class:  "index-title-link" %>
+	  </h3>
+	  <h3 class="byline"><%= post.byline %></h3>
+	  <p class="published">Posted: <%= time_ago_in_words post.created_at %> ago</p>
+	  <% if signed_in? %>
+		  <ul class="user-links">
+		  	<li><%= link_to 'Show', post, class: "user-link" %></li>
+		  	<li><%= link_to 'Edit', edit_post_path(post), class: "user-link" %></li>
+		  	<li><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: "user-link" %></li>
+		  </ul>
+	  <% end %>
+	<% end %>
+</div>
