blog styling improvement

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -29,9 +29,10 @@ div.blog-container {
 		margin-left: 30px;
 	}
 	p.published {
+		text-align: right;
 		font-weight: 300;
 		font-size: 1.5em;
-		margin-top: -50px;
+		margin-top: -40px;
 		margin-left: 220px;
 	}
 	.post-body {
